public static class GlobalValues
{

}

public static class Tags
{
    public const string PLAYER = "Player";
    public const string COIN = "Coin";
}

public static class Layers
{
    public const int GROUND = 1 << 3;
}

public static class Animations
{
    public const string IDLE = "Idle";
    public const string RUN = "Run";
    public const string SLIDE = "Slide";
    public const string BEAM = "Beam";
    public const string JUMP = "Jump";
    public const string VICTORY = "Win";
}
